--- a/backend/static/clock.css
+++ b/backend/static/clock.css
@@ -1,4 +1,97 @@
 /**For the Analog Clock**/
+:root{
+  --lightmode: #414141;
+  --darkmode: #fff;
+}
+  #min-checkbox{
+    right: 0px;
+    position: relative;
+  }
+  #min-checkbox label{
+    margin: 0;
+  }
+  .checkbox-wrapper-54{
+    position: fixed;
+    z-index: 3;
+    right: 25px;
+  } 
+  @media (min-width: 992px){
+    #min-checkbox input[type="checkbox"]{
+      display: none !important;
+    }
+  }  
+  .checkbox-wrapper-54 input[type="checkbox"] {
+    visibility: hidden;
+    display: none;
+    position: fixed;
+  }
+
+  .checkbox-wrapper-54.btn {
+    box-shadow: none !important;
+    border: none !important;
+    background: none !important;
+  }
+
+  .checkbox-wrapper-54 *,
+  .checkbox-wrapper-54 ::after,
+  .checkbox-wrapper-54 ::before {
+    box-sizing: border-box;
+  }
+
+  /* The switch - the box around the slider */
+  .checkbox-wrapper-54 .switch {
+    --width-of-switch: 3.5em;
+    --height-of-switch: 2em;
+    /* size of sliding icon -- sun and moon */
+    --size-of-icon: 1.4em;
+    /* it is like a inline-padding of switch */
+    --slider-offset: 0.3em;
+    position: relative;
+    width: var(--width-of-switch);
+    height: var(--height-of-switch);
+    display: inline-block;
+  }
+
+  /* The slider */
+  .checkbox-wrapper-54 .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #f4f4f5;
+    transition: .4s;
+    border-radius: 30px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  }
+
+  .checkbox-wrapper-54 .slider:before {
+    position: absolute;
+    content: "";
+    height: var(--size-of-icon,1.4em);
+    width: var(--size-of-icon,1.4em);
+    border-radius: 20px;
+    left: var(--slider-offset,0.3em);
+    top: 50%;
+    transform: translateY(-50%);
+    background: linear-gradient(40deg,#ff0080,#ff8c00 70%);
+    ;
+   transition: .4s;
+  }
+
+  .checkbox-wrapper-54 input:checked + .slider {
+    background-color: #303136;
+  }
+
+  .checkbox-wrapper-54 input:checked + .slider:before {
+    left: calc(100% - (var(--size-of-icon,1.4em) + var(--slider-offset,0.3em)));
+    background: #303136;
+    /* change the value of second inset in box-shadow to change the angle and direction of the moon  */
+    box-shadow: inset -3px -2px 5px -2px #8983f7, inset -10px -4px 0 0 #a3dafb;
+  }
+
+
 #Clock{
     width: 70px;
     color: rgba(255, 217, 0, 0.547);
@@ -51,7 +144,7 @@
   }
   
   .outer-clock-face .marking {
-    background: #ffffff;
+    background: var(--darkmode);
     width: 3px;
     
   }
@@ -123,7 +216,7 @@
     width: 50%;
     right: 50%;
     height: 6px;
-    background: #ffffff;
+    background: var(--darkmode);
     position: absolute;
     top: 50%;
     border: 2px solid rgba(3, 2, 0, 0);
@@ -132,7 +225,7 @@
     transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
     border-radius: 38px;
   /*box-shadow:  6px -6px 8px #a9a9a9,
-               -6px 6px 8px #ffffff;*/
+               -6px 6px 8px var(--darkmode);*/
   }
   
   .hand.hour-hand {
