--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -253,13 +253,19 @@
                 </div>
                 <div class="owl-carousel githubstats-carousel">
                     <div class="githubstats-item">
+                        <div class="githubstats-img">
                         <img src="https://github-readme-stats.vercel.app/api?username=ojutalayomi&amp;theme=light&amp;hide_border=true&amp;include_all_commits=false&amp;count_private=false" alt="" loading="eager">
+                        </div>
                     </div>
                     <div class="githubstats-item">
+                        <div class="githubstats-img">
                         <img src="https://github-readme-streak-stats.herokuapp.com/?user=ojutalayomi&amp;theme=light&amp;hide_border=true" alt="" loading="eager">
+                        </div>
                     </div>
                     <div class="githubstats-item">
+                        <div class="githubstats-img">
                         <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=ojutalayomi&amp;theme=light&amp;hide_border=true&amp;include_all_commits=false&amp;count_private=false&amp;layout=compact" alt="" loading="eager">
+                        </div>
                     </div>
                 </div>
             </div>
@@ -316,8 +322,9 @@
                             <p>ojutalayomide@ayocodex.site</p>
                         </div>
                         <div class="footer-social">
+                            <a href="https://github.com/ojutalayomi"><i class="fab fa-github"></i></a>
                             <a href="https://twitter.com/ojutalayomi"><i class="fab fa-twitter"></i></a>
-                            <a href="https://facebook.com/ayomide.ojutalayo.12"><i class="fab fa-facebook-f"></i></a>
+                            <a href="https://facebook.com/ayomideojutalayo12"><i class="fab fa-facebook-f"></i></a>
                             <a href="http://www.youtube.com/@ayomideojutalayo9082"><i class="fab fa-youtube"></i></a>
                             <a href="https://www.instagram.com/aojutalayo/"><i class="fab fa-instagram"></i></a>
                             <a href="https://www.linkedin.com/in/ayomideojutalayo"><i class="fab fa-linkedin-in"></i></a>
@@ -358,7 +365,7 @@
         <script src="{{ url_for('static', filename='lib/lightbox/js/lightbox.min.js') }}"></script>
         
         <!-- Contact Javascript File -->
-        <script src="mail/jqBootstrapValidation.min.js"></script>
+        <script src="{{ url_for('static', filename='mail/jqBootstrapValidation.min.js')}}"></script>
         <script src="mail/contact.js"></script>
 
         <!-- Template Javascript -->
