--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -58,7 +58,8 @@
                         <a href="#portfolio" class="nav-item nav-link">Portfolio</a>
                         <a href="#price" class="nav-item nav-link">Price</a>
                         <a href="#review" class="nav-item nav-link">Github</a>
-                        <a href="" class="nav-item nav-link maxi"><!--Light-Dark Mode Toggler-->
+                        <a href="" class="nav-item nav-link maxi">
+                            <!--Light-Dark Mode Toggler-->
                             <div class="checkbox-wrapper-54" id="min-checkbox">
                                    <label class="switch">
                                      <input type="checkbox" id="checkbox">
@@ -348,6 +349,11 @@
         <!-- Pre Loader -->
         <div id="loader" class="show">
             <div class="loader"></div>
+            <div class="loader-content">
+                <div class="loader-text">
+                    <h2></h2>
+                    <div class="typed-text">Loading . . ., Welcome To My Website . . ., Please Wait . . .</div>
+                </div>
         </div>
 
         <style></style>
