--- a/backend/static/style.css
+++ b/backend/static/style.css
@@ -85,6 +85,9 @@ a:focus {
 }
 
 #loader {
+    flex-direction: column;
+    background: transparent;
+    backdrop-filter: blur(74px);
     position: fixed;
     top: 0;
     right: 0;
@@ -93,13 +96,31 @@ a:focus {
     display: flex;
     align-items: center;
     justify-content: center;
-    background: #ffffff;
     opacity: 0;
     visibility: hidden;
     -webkit-transition: opacity .3s ease-out, visibility 0s linear .3s;
     -o-transition: opacity .3s ease-out, visibility 0s linear .3s;
     transition: opacity .3s ease-out, visibility 0s linear .3s;
     z-index: 999;
+}
+
+.loader-text .typed-text {
+    display: none;
+}
+
+.loader-text h2 {
+    display: inline-block;
+    margin-top: 0;
+    font-size: 25px;
+    color: #d1a103;
+   /** text-shadow: 0 0 #ffffff;**/
+}
+
+.loader-text .typed-cursor {
+    font-size: 25px;
+    font-weight: 300;
+    color: #d1a103;
+    display: none;
 }
 
 #loader.show {
@@ -114,6 +135,7 @@ a:focus {
     position: relative;
     width: 45px;
     height: 45px;
+    margin-bottom: 50px;
     border: 5px solid #0b173d;
     border-top: 5px solid #d1a103;
     border-radius: 50%;
@@ -158,22 +180,6 @@ a:focus {
     color: #D1A103;
 }
 
-.parallax{
-    background-image: url(/img/cover.png);
-    min-height: 100%;
-    padding-top: 5px; 
-}
-
-.parallax,.parallax1,.parallax2{
-    /* Create the parallax scrolling effect */
-    opacity: 1;
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-      /*background: ;*/
-}
-
 /**********************************/
 /*********** Nav Bar CSS **********/
 /**********************************/
@@ -202,8 +208,21 @@ a:focus {
 }
 
 .navbar .navbar-brand img {
+    min-width: 69px;
+    max-height: 69px;
     max-width: 100%;
     max-height: 80px;
+}
+
+a.nav-item.nav-link.maxi {
+    display: block;
+    padding: 0px;
+}
+
+@media (min-width: 992px) {
+a.nav-item.nav-link.maxi {
+    padding: 0px !important;
+}
 }
 
 .navbar .dropdown-menu {
