--- a/css/style.css
+++ b/css/style.css
@@ -6,11 +6,17 @@
     font-family: myFirstFont;
     src: url(https://ojutalayomi.github.io/I/Merienda-VariableFont_wght.ttf);
 }
-
+:root{
+    --lightmode: #000;
+    --darkmode: #ffffff;
+    --lbodymode: #ffffff;
+    --dbodymode: #15202b;
+}
 body {
     color: #797979;
-    background: #ffffff;
+    background: var(--lbodymode);
     font-family: myFirstFont;
+    color-scheme: light dark;
 }
 #row{
     flex-direction: row-reverse !important;
@@ -79,6 +85,9 @@ a:focus {
 }
 
 #loader {
+    flex-direction: column;
+    background: transparent;
+    backdrop-filter: blur(74px);
     position: fixed;
     top: 0;
     right: 0;
@@ -87,13 +96,31 @@ a:focus {
     display: flex;
     align-items: center;
     justify-content: center;
-    background: #ffffff;
     opacity: 0;
     visibility: hidden;
     -webkit-transition: opacity .3s ease-out, visibility 0s linear .3s;
     -o-transition: opacity .3s ease-out, visibility 0s linear .3s;
     transition: opacity .3s ease-out, visibility 0s linear .3s;
     z-index: 999;
+}
+
+.loader-text .typed-text {
+    display: none;
+}
+
+.loader-text h2 {
+    display: inline-block;
+    margin-top: 0;
+    font-size: 25px;
+    color: #d1a103;
+   /** text-shadow: 0 0 #ffffff;**/
+}
+
+.loader-text .typed-cursor {
+    font-size: 25px;
+    font-weight: 300;
+    color: #d1a103;
+    display: none;
 }
 
 #loader.show {
@@ -108,6 +135,7 @@ a:focus {
     position: relative;
     width: 45px;
     height: 45px;
+    margin-bottom: 50px;
     border: 5px solid #0b173d;
     border-top: 5px solid #d1a103;
     border-radius: 50%;
@@ -152,22 +180,6 @@ a:focus {
     color: #D1A103;
 }
 
-.parallax{
-    background-image: url(/img/cover.png);
-    min-height: 100%;
-    padding-top: 5px; 
-}
-
-.parallax,.parallax1,.parallax2{
-    /* Create the parallax scrolling effect */
-    opacity: 1;
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-      /*background: ;*/
-}
-
 /**********************************/
 /*********** Nav Bar CSS **********/
 /**********************************/
@@ -196,8 +208,21 @@ a:focus {
 }
 
 .navbar .navbar-brand img {
+    min-width: 69px;
+    max-height: 69px;
     max-width: 100%;
     max-height: 80px;
+}
+
+a.nav-item.nav-link.maxi {
+    display: block;
+    padding: 0px;
+}
+
+@media (min-width: 992px) {
+a.nav-item.nav-link.maxi {
+    padding: 0px !important;
+}
 }
 
 .navbar .dropdown-menu {
@@ -219,7 +244,7 @@ a:focus {
     
     .navbar.nav-sticky {
         padding: 10px 60px;
-        background: #ffffff !important;
+        background: var(--lbodymode) !important;
     }
     
     .navbar .navbar-brand {
@@ -257,7 +282,7 @@ a:focus {
 @media (max-width: 991.98px) {   
     .navbar {
         padding: 15px;
-        background: #ffffff !important;
+        background: var(--lbodymode) !important;
     }
     
     .navbar .navbar-brand {
@@ -287,7 +312,7 @@ a:focus {
     margin-bottom: 45px;
     padding: 120px 0 0 0;
     overflow: hidden;
-    background: linear-gradient(rgb(10, 23, 61, .46), rgb(10, 23, 61, .95)), url(https://ojutalayomi.github.io/I/cover.png);
+    background: linear-gradient(rgb(10, 23, 61, .46), rgb(10, 23, 61, .95)), url(/static/img/cover.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -471,6 +496,9 @@ a:focus {
     letter-spacing: 1px;
     text-transform: uppercase;
     background: #ffffff;
+}
+.dark{
+    background: #15202b;
 }
 
 .section-header p::before {
@@ -1257,50 +1285,49 @@ a:focus {
 
 
 /*******************************/
-/******* Testimonial CSS *******/
+/******* githubstats CSS *******/
 /*******************************/
-.testimonial {
+.githubstats {
     position: relative;
     margin: 45px 0;
     padding: 90px 0;
     background: #0B173D;
 }
 
-.testimonial .container {
+.githubstats .container {
     max-width: 900px;
 }
 
-.testimonial .testimonial-icon {
+.githubstats .githubstats-icon {
     margin-bottom: 45px;
     text-align: center;
 }
 
-.testimonial .testimonial-icon i {
+.githubstats .githubstats-icon i {
     font-size: 60px;
     color: rgba(256, 256, 256, .5);
 }
 
-.testimonial .testimonial-item {
+.githubstats .githubstats-item {
     position: relative;
     margin: 0 15px;
     text-align: center;
 }
 
-.testimonial .testimonial-img {
+.githubstats .githubstats-img {
     position: relative;
     margin-bottom: 15px;
     z-index: 1;
 }
 
-.testimonial .testimonial-item img {
+.githubstats .githubstats-item img {
     margin: 0 auto;
-    width: 120px;
     padding: 10px;
-    border: 5px dotted #ffffff;
+    border: 5px solid #D1A103;
     border-radius: 100px;
 }
 
-.testimonial .testimonial-text {
+.githubstats .githubstats-text {
     position: relative;
     margin-top: -70px;
     padding: 65px 35px 30px 35px;
@@ -1309,30 +1336,30 @@ a:focus {
     border-radius: 500px;
 }
 
-.testimonial .testimonial-item p {
+.githubstats .githubstats-item p {
     font-size: 18px;
     font-style: italic;
 }
 
-.testimonial .testimonial-text h3 {
+.githubstats .githubstats-text h3 {
     color: #0B173D;
     font-size: 18px;
     font-weight: 600;
     margin-bottom: 10px;
 }
 
-.testimonial .testimonial-text h4 {
+.githubstats .githubstats-text h4 {
     color: #666666;
     font-size: 14px;
     margin-bottom: 0;
 }
 
-.testimonial .owl-dots {
+.githubstats .owl-dots {
     margin-top: 15px;
     text-align: center;
 }
 
-.testimonial .owl-dot {
+.githubstats .owl-dot {
     display: inline-block;
     margin: 0 5px;
     width: 12px;
@@ -1341,7 +1368,7 @@ a:focus {
     background: rgba(256, 256, 256, .5);
 }
 
-.testimonial .owl-dot.active {
+.githubstats .owl-dot.active {
     background: #ffffff;
 }
 
@@ -1637,3 +1664,4 @@ a:focus {
         padding: 0 5px;
     }
 }
+
